--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,33 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  app_ui:
+    path: packages/app_ui
+  cached_network_image: ^3.0.0
+  collection: ^1.17.0
+  cupertino_icons: ^1.0.2
+  dio: ^5.0.3
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.1.3
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  hive_flutter: ^1.1.0
+  json_annotation: ^4.7.0
+  meta: ^1.8.0
+  riverpod_annotation: ^2.1.1
 
 dev_dependencies:
+
+  build_runner: ^2.3.3
+  custom_lint:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  json_serializable: ^6.6.1
+  mocktail: ^0.3.0
+  riverpod_generator: ^2.1.3
+  riverpod_lint:
+  very_good_analysis: ^5.0.0+1
 
 flutter:
   uses-material-design: true
