--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,5 +23,6 @@ linter:
   rules:
     public_member_api_docs: false
     always_put_required_named_parameters_first: false
+    flutter_style_todos: false
 
 
