--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   cached_network_image: ^3.0.0
   collection: ^1.17.0
   cupertino_icons: ^1.0.2
-  dio: ^5.0.3
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.1.3
@@ -22,6 +22,7 @@ dependencies:
   json_annotation: ^4.7.0
   meta: ^1.8.0
   riverpod_annotation: ^2.1.1
+  sms_autofill: ^2.2.0
 
 dev_dependencies:
 
